# origin

./: .gitignore
coursework/: CMakeLists.txt  main.cpp
coursework/lib/: CMakeLists.txt  air_tv.cpp  air_tv.h  boots.cpp  boots.h  broom.cpp  broom.h  camel.cpp  camel.h  camel_fast.cpp  camel_fast.h  carpet.cpp  carpet.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  ground_tv.cpp  ground_tv.h  macros.h  tv.cpp  tv.h
lesson_1/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_10/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_10/task_2/: CMakeLists.txt  equilateral.h  figure.cpp  isosceles.h  quadrangle.h  rectangle.h  rhomb.h  right.cpp  sqare.cpp  sqare.h
lesson_11/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_11/task_2/: main.cpp  task_2.sln  task_2.vcxproj
lesson_11/task_3/: CMakeLists.txt  main.cpp
lesson_11/task_4/: main.cpp  task_4.sln  task_4.vcxproj
lesson_11/task_5/: CMakeLists.txt
lesson_11/task_5/lib/: CMakeLists.txt  equilateral.h  figure.h  isosceles.h  parallelogram.h  quadrangle.h  rectangle.h  rhomb.h  right.h  sqare.h  triangle.cpp  triangle.h
lesson_2/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_2/task_2/: main.cpp  task_2.sln  task_2.vcxproj
lesson_2/task_3/: main.cpp  task_3.sln  task_3.vcxproj
lesson_3/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_3/task_2/: main.cpp  task_2.sln  task_2.vcxproj
lesson_4/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_4/task_2/: main.cpp  task_2.sln  task_2.vcxproj
lesson_5/task_1/: main.cpp  task_1.sln  task_1.vcxproj
lesson_5/task_2/: main.cpp  (+2 more)
(+177 files in other folders)
